--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
