--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.12.0-beta.1",
     "uuid": "^8.3.2"
   }
