--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-jwt-cookiecombo": "^1.0.5",
     "passport-local": "^1.0.0",
     "sequelize": "^6.12.0-beta.1",
     "uuid": "^8.3.2"
