--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/eslint-parser": "^7.16.5",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb": "^19.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +15,6 @@
   "author": "",
   "license": "ISC",
   "description": "",
-
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
